@@ -9,6 +9,10 @@
     4. /etc/portage/sets/world is a symlink to /var/lib/portage/world
        It is for convenience. Do not mistake this for the actual file.
 
+  08 Aug 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py: 
+  Leave /var/tmp w/out it's own permissions, chowning/chmoding just 
+  /var/tmp/portage (#37521).
+
   08 Aug 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh 
   pym/portage.py: Corrected bug in profile.bashrc support, added aliases 
   for saving/restoring IFS (remove_path_entry and profile.bashrc loop 
